# graxaim

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  SECURITY.md  install.sh
.claude/commands/: add-command.md  verify-build.md
.claude/rules/: env-file-safety.md  graxaim-patterns.md  testing-strategy.md
.claude/skills/design-patterns/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/tdd-graxaim/: SKILL.md
.github/workflows/: ci.yml
docs/: PRD.md
plans/: claude-directory-plan.md  roadmap-execution-plan.md  rtk-best-practices-analysis.md
src/: cli.rs  errors.rs  lib.rs  main.rs
src/commands/: audit.rs  check.rs  create.rs  current.rs  delete.rs  diff.rs  edit.rs  export.rs  init.rs  list.rs  mod.rs  rename.rs  run.rs  schema.rs  seal.rs  unseal.rs  use_profile.rs
src/core/: auditor.rs  config.rs  differ.rs  encryption.rs  env_file.rs  hooks.rs  mod.rs  profile.rs  project.rs  schema.rs  shell.rs
src/ui/: mod.rs  output.rs  picker.rs  redact.rs
tests/: integration.rs
tests/integration/: audit_test.rs  check_test.rs  diff_test.rs  encryption_test.rs  export_test.rs  hooks_test.rs  init_test.rs  list_test.rs  profile_management_test.rs  run_test.rs  use_test.rs
